--- a/test11.html
+++ b/test11.html
@@ -170,9 +170,9 @@
         if (tech1Count == 2) {
           alert("Technology 1 has been activated!");
           var button = $("techButton6");
-          button.style.background = "#7096cf";
+          button.style.display = "block";
           var name = $("techName6");
-          button.style.background = "#7096cf";
+          button.style.display = "block";
         }
         if (tech2Active == true) {
           tech2Count++; 
@@ -180,9 +180,9 @@
         if (tech2Count == 2) {
           alert("Technology 2 has been activated!");
           var button = $("techButton7");
-          button.style.background = "#7096cf";
+          button.style.display = "block";
           var name = $("techName7");
-          button.style.background = "#7096cf";
+          button.style.display = "block";
         }
         if (tech3Active == true) {
           tech3Count++; 
@@ -190,9 +190,9 @@
         if (tech3Count == 2) {
           alert("Technology 3 has been activated!");
           var button = $("techButton8");
-          button.style.background = "#7096cf";
+          button.style.display = "block";
           var name = $("techName8");
-          button.style.background = "#7096cf";
+          button.style.display = "block";
         }
         if (tech4Active == true) {
           tech4Count++; 
@@ -200,9 +200,9 @@
         if (tech4Count == 2) {
           alert("Technology 4 has been activated!");
           var button = $("techButton9");
-          button.style.background = "#7096cf";
+          button.style.display = "block";
           var name = $("techName9");
-          button.style.background = "#7096cf";
+          button.style.display = "block";
         }
         if (tech5Active == true) {
           tech5Count++; 
@@ -210,9 +210,9 @@
         if (tech5Count == 2) {
           alert("Technology 5 has been activated!");
           var button = $("techButton10");
-          button.style.background = "#7096cf";
+          button.style.display = "block";
           var name = $("techName10");
-          button.style.background = "#7096cf";
+          button.style.display = "block";
         }
       }
       function generateTechButtons() {
@@ -239,4 +239,4 @@
     </script>
   </body>
 </html>
-<!--Version 30--->
+<!--Version 31--->
