--- a/test11.html
+++ b/test11.html
@@ -172,7 +172,7 @@
           var button = $("techButton6");
           button.style.display = "block";
           var name = $("techName6");
-          button.style.display = "block";
+          name.style.display = "block";
         }
         if (tech2Active == true) {
           tech2Count++; 
@@ -182,7 +182,7 @@
           var button = $("techButton7");
           button.style.display = "block";
           var name = $("techName7");
-          button.style.display = "block";
+          name.style.display = "block";
         }
         if (tech3Active == true) {
           tech3Count++; 
@@ -192,7 +192,7 @@
           var button = $("techButton8");
           button.style.display = "block";
           var name = $("techName8");
-          button.style.display = "block";
+          name.style.display = "block";
         }
         if (tech4Active == true) {
           tech4Count++; 
@@ -202,7 +202,7 @@
           var button = $("techButton9");
           button.style.display = "block";
           var name = $("techName9");
-          button.style.display = "block";
+          name.style.display = "block";
         }
         if (tech5Active == true) {
           tech5Count++; 
@@ -212,7 +212,7 @@
           var button = $("techButton10");
           button.style.display = "block";
           var name = $("techName10");
-          button.style.display = "block";
+          name.style.display = "block";
         }
       }
       function generateTechButtons() {
@@ -239,4 +239,4 @@
     </script>
   </body>
 </html>
-<!--Version 31--->
+<!--Version 32--->
