--- a/test11.html
+++ b/test11.html
@@ -246,7 +246,7 @@
         button.style.display = "none";
         menu.style.display = "inline-grid";
       }
-      function showTechMenu() {
+      function hideTechMenu() {
         var menu = $("techMenu");
         var button = $("techButton");
         button.style.display = "block";
@@ -258,4 +258,4 @@
     </script>
   </body>
 </html>
-<!--Version 33--->
+<!--Version 34--->
