--- a/test11.html
+++ b/test11.html
@@ -91,7 +91,7 @@
       <div class="techCell" id="techButton8" onclick="hideTechMenu"><button class="techButton" id="tB8" onclick="activateTech8()"> Research </button></div>
       <div class="techCell" id="techName9" onclick="hideTechMenu"><span> Technology 9 </span></div>
       <div class="techCell" id="techButton9" onclick="hideTechMenu"><button class="techButton" id="tB9" onclick="activateTech9()"> Research </button></div>
-      <div class="techCell" id="techName10 onclick="hideTechMenu""><span> Technology 10 </span></div>
+      <div class="techCell" id="techName10" onclick="hideTechMenu"><span> Technology 10 </span></div>
       <div class="techCell" id="techButton10" onclick="hideTechMenu"><button class="techButton" id="tB10" onclick="activateTech10()"> Research </button></div>
     </div>
     
@@ -258,4 +258,4 @@
     </script>
   </body>
 </html>
-<!--Version 35--->
+<!--Version 36--->
