--- a/test11.html
+++ b/test11.html
@@ -74,25 +74,25 @@
     
     <div class="techMenu" id="techMenu">
       <div class="techCell" id="techName1" onclick="hideTechMenu()"><span> Technology 1 </span></div>
-      <div class="techCell" id="techButton1" onclick="hideTechMenu()"><button class="techButton" id="tB1" onclick="activateTech1()"> Research </button></div>
+      <div class="techCell" id="techButton1"><button class="techButton" id="tB1" onclick="activateTech1()"> Research </button></div>
       <div class="techCell" id="techName2" onclick="hideTechMenu()"><span> Technology 2 </span></div>
-      <div class="techCell" id="techButton2" onclick="hideTechMenu()"><button class="techButton" id="tB2" onclick="activateTech2()"> Research </button></div>
+      <div class="techCell" id="techButton2"><button class="techButton" id="tB2" onclick="activateTech2()"> Research </button></div>
       <div class="techCell" id="techName3" onclick="hideTechMenu()"><span> Technology 3 </span></div>
-      <div class="techCell" id="techButton3" onclick="hideTechMenu()"><button class="techButton" id="tB3" onclick="activateTech3()"> Research </button></div>
+      <div class="techCell" id="techButton3"><button class="techButton" id="tB3" onclick="activateTech3()"> Research </button></div>
       <div class="techCell" id="techName4" onclick="hideTechMenu()"><span> Technology 4 </span></div>
-      <div class="techCell" id="techButton4" onclick="hideTechMenu()"><button class="techButton" id="tB4" onclick="activateTech4()"> Research </button></div>
+      <div class="techCell" id="techButton4"><button class="techButton" id="tB4" onclick="activateTech4()"> Research </button></div>
       <div class="techCell" id="techName5" onclick="hideTechMenu()"><span> Technology 5 </span></div>
-      <div class="techCell" id="techButton5" onclick="hideTechMenu()"><button class="techButton" id="tB5" onclick="activateTech5()"> Research </button></div>
+      <div class="techCell" id="techButton5"><button class="techButton" id="tB5" onclick="activateTech5()"> Research </button></div>
       <div class="techCell" id="techName6" onclick="hideTechMenu()"><span> Technology 6 </span></div>
-      <div class="techCell" id="techButton6" onclick="hideTechMenu()"><button class="techButton" id="tB6" onclick="activateTech6()"> Research </button></div>
+      <div class="techCell" id="techButton6"><button class="techButton" id="tB6" onclick="activateTech6()"> Research </button></div>
       <div class="techCell" id="techName7" onclick="hideTechMenu()"><span> Technology 7 </span></div>
-      <div class="techCell" id="techButton7" onclick="hideTechMenu()"><button class="techButton" id="tB7" onclick="activateTech7()"> Research </button></div>
+      <div class="techCell" id="techButton7"><button class="techButton" id="tB7" onclick="activateTech7()"> Research </button></div>
       <div class="techCell" id="techName8" onclick="hideTechMenu()"><span> Technology 8 </span></div>
-      <div class="techCell" id="techButton8" onclick="hideTechMenu()"><button class="techButton" id="tB8" onclick="activateTech8()"> Research </button></div>
+      <div class="techCell" id="techButton8"><button class="techButton" id="tB8" onclick="activateTech8()"> Research </button></div>
       <div class="techCell" id="techName9" onclick="hideTechMenu()"><span> Technology 9 </span></div>
-      <div class="techCell" id="techButton9" onclick="hideTechMenu()"><button class="techButton" id="tB9" onclick="activateTech9()"> Research </button></div>
+      <div class="techCell" id="techButton9"><button class="techButton" id="tB9" onclick="activateTech9()"> Research </button></div>
       <div class="techCell" id="techName10" onclick="hideTechMenu()"><span> Technology 10 </span></div>
-      <div class="techCell" id="techButton10" onclick="hideTechMenu()"><button class="techButton" id="tB10" onclick="activateTech10()"> Research </button></div>
+      <div class="techCell" id="techButton10"><button class="techButton" id="tB10" onclick="activateTech10()"> Research </button></div>
     </div>
     
     <button class="techButton" id="techButton" onclick="showTechMenu()"><span> T </span></button>
@@ -258,4 +258,4 @@
     </script>
   </body>
 </html>
-<!--Version 37--->
+<!--Version 38--->
