--- a/test11.html
+++ b/test11.html
@@ -73,6 +73,7 @@
     <button id="turnButton" onclick="nextTurn()"> Next Turn </button>
 
     <div class="techMenu" id="techMenu">
+      <div class="techCell" id="techName1" onclick="hideTechMenu()"><span> Technology 1 </span></div>
       <div class="techCell" id="techButton1" onclick="hideTechMenu()"><button class="techButton" id="tB1" onclick="activateTech1()"> Research </button></div>
       <div class="techCell" id="techName2" onclick="hideTechMenu()"><span> Technology 2 </span></div>
       <div class="techCell" id="techButton2" onclick="hideTechMenu()"><button class="techButton" id="tB2" onclick="activateTech2()"> Research </button></div>
@@ -257,4 +258,4 @@
     </script>
   </body>
 </html>
-<!--Version 37--->
+<!--Version 38--->
