--- a/test11.html
+++ b/test11.html
@@ -220,6 +220,56 @@
           var name = $("techName10");
           name.style.display = "block";
         }
+        if (tech6Active == true) {
+          tech6Count++; 
+        }
+        if (tech6Count == 2) {
+          alert("Technology 6 has been activated!");
+          var button = $("techButton6");
+          button.style.display = "block";
+          var name = $("techName6");
+          name.style.display = "block";
+        }
+        if (tech7Active == true) {
+          tech7Count++; 
+        }
+        if (tech7Count == 2) {
+          alert("Technology 7 has been activated!");
+          var button = $("techButton7");
+          button.style.display = "block";
+          var name = $("techName7");
+          name.style.display = "block";
+        }
+        if (tech8Active == true) {
+          tech8Count++; 
+        }
+        if (tech8Count == 2) {
+          alert("Technology 8 has been activated!");
+          var button = $("techButton8");
+          button.style.display = "block";
+          var name = $("techName8");
+          name.style.display = "block";
+        }
+        if (tech9Active == true) {
+          tech9Count++; 
+        }
+        if (tech9Count == 2) {
+          alert("Technology 9 has been activated!");
+          var button = $("techButton9");
+          button.style.display = "block";
+          var name = $("techName9");
+          name.style.display = "block";
+        }
+        if (tech10Active == true) {
+          tech10Count++; 
+        }
+        if (tech10Count == 2) {
+          alert("Technology 10 has been activated!");
+          var button = $("techButton10");
+          button.style.display = "block";
+          var name = $("techName10");
+          name.style.display = "block";
+         
       }
       function generateTechButtons() {
         var allTechButtons = $$('.techButton');
@@ -258,4 +308,4 @@
     </script>
   </body>
 </html>
-<!--Version 39--->
+<!--Version 40--->
